Update to the notebook pseudocode to select relevant eigenvalues.

--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -392,26 +392,45 @@
     "The code to manipulate the system parameters until one or several control conditions are reached could look something like the following:\n",
     "\n",
     "```python\n",
+    "### Load necessary packages\n",
     "import gradients as g\n",
     "import pickle\n",
+    "import numpy as np\n",
     "import other_packages\n",
     "\n",
+    "### Load stored data\n",
     "eqs = pickle.load(...) # reference points\n",
     "pars = pickle.load(...) # nominal parameters\n",
-    "new_eqs = eqs.copy()\n",
-    "new_pars = pars.copy()\n",
+    "new_eqs = eqs.copy() # copy for modification\n",
+    "new_pars = pars.copy() # copy for modification\n",
     "\n",
     "### Define control conditions\n",
-    "step_size = 1e-3\n",
+    "epsilon= 1e-3\n",
     "n_iter = 1e3\n",
     "e_target = 1 # eigenvalue change target\n",
-    "eigenval_diff = # calcualate eigenval difference\n",
     "q = False\n",
+    "\n",
+    "### Select relevant eigenvalues\n",
+    "e, v = # calculate eigenvectors and eigenvalues in prefered way\n",
+    "seps = # make iterable with relevant separatrix keys from eqs\n",
+    "for sep in seps:\n",
+    "    direction = eqs[objective] - eqs[sep]\n",
+    "    for vv in v:\n",
+    "        dot = np.dot(direction, vv) / (np.norm(direction) * np.norm(vv))\n",
+    "        if dot > threshold:\n",
+    "            # store e, v however comfortable\n",
+    "        else:\n",
+    "            # ignore e, v\n",
+    "\n",
+    "### Extract relevant eigenvalues for reference\n",
+    "eigenval_diff = # calcualate eigenval difference for the relevant ones, as stored above\n",
+    "        \n",
     "\n",
     "ii = 0\n",
     "while ii < n_iter and eigenval_diff < e_target and not q:\n",
     "    e, d = g.eigenvar_gradient(g.F_s, new_eqs['epi'], new_pars)\n",
-    "    lost, new, q = g.control(d, step_size, new_pars, new_eqs)\n",
+    "    d = # extract only the relevant eigenvalues\n",
+    "    lost, new, q = g.control(d, epsilon, new_pars, new_eqs)\n",
     "    \n",
     "    eigenval_diff = # calculate eigenval difference again\n",
     "\n",
