Removed `bind_alpha()` from gradients.py. Checkpoint for gradient_descent.ipynb because it will be modified in major ways.

--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "49741387-6119-4cfa-845d-b805796daa0c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Stability control by local sensitivity analysis\n",
     "\n",
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "8955159d-3cda-4e34-a639-231d234f89ec",
    "metadata": {},
    "outputs": [
@@ -73,7 +75,7 @@
    "source": [
     "import gradients as g\n",
     "import pickle\n",
-    "from pprint import pprint #just for nice print thingies\n",
+    "from pprint import pprint #just for a nice display of the results\n",
     "\n",
     "eqs = pickle.load(open('equilibria_names.pckl', 'rb'))\n",
     "pars = pickle.load(open('nom_pars.pckl', 'rb'))\n",
@@ -90,12 +92,12 @@
    "id": "bbd89c6a-9087-4195-873b-0c9cd616fc29",
    "metadata": {},
    "source": [
-    "The `gradients.py` file has pre-made functions that serve to calculate local sensitivity to parameter variation, gradients to increase distance between two equilibrium points, and gradients to reduce $R(\\lambda)$."
+    "The `gradients.py` file has pre-made functions that can be used to calculate local sensitivity to parameter variation, gradients to increase distance between two equilibrium points, and gradients to reduce $R(\\lambda)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "85b77e35-217c-4d8e-8438-3bd7e0a4dc6e",
    "metadata": {},
    "outputs": [
@@ -103,6 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Local sensitivity to parameter variation of equilibrium 'epi'\n",
       "array([[ 6.69759691e-01, -1.18278236e-01, -1.23903302e-02,\n",
       "        -7.50359961e-04, -4.31499158e-01,  2.01148735e-04,\n",
       "         1.91595622e-03, -1.21659259e-04, -2.07087918e-05,\n",
@@ -147,6 +150,8 @@
       "         2.03132058e+00,  4.51529893e+00,  3.57184828e+00,\n",
       "        -1.11918516e+01,  1.23485664e+00,  2.33440792e-01,\n",
       "         2.62430485e+01]])\n",
+      "\n",
+      "Direction to maximally increase the distance between 'epi' and 'sen'\n",
       "array([ 9.50349833e-01, -1.67807515e-01, -1.75793389e-02, -1.05412866e-03,\n",
       "       -2.11362239e+00,  9.80537722e-04,  9.33942182e-03, -5.95872824e-04,\n",
       "        4.60230495e-03,  1.48179927e-02,  4.70662446e-03,  1.37501035e-02,\n",
@@ -155,6 +160,8 @@
       "       -2.44348313e-03, -3.24379075e-02, -3.95342081e-02, -8.57323920e-03,\n",
       "       -4.04719471e-01, -8.21386431e-01, -7.19526330e-01,  2.06047237e+00,\n",
       "       -2.25341641e-01, -4.20360186e-02, -4.74953338e+00])\n",
+      "\n",
+      "Direction to maximally dencrease the real components of each eigenvalue of 'epi'\n",
       "array([array([ 1.25750587e+01,  1.55441948e-01,  2.99652552e-02,  5.07847291e-03,\n",
       "              -1.51600528e+01,  1.21363422e-02,  1.10987370e-01, -7.57136185e-03,\n",
       "              -7.46638957e-04, -4.19923540e-03, -8.89952507e-04, -3.17595119e-03,\n",
@@ -194,14 +201,17 @@
    "source": [
     "# local sensitivity\n",
     "sens = g.state_sens(g.F_s, eqs['epi'], pars)\n",
+    "print('Local sensitivity to parameter variation of equilibrium \\'epi\\'')\n",
     "pprint(sens) # prints an nxm array of the sensitivity of the given equilibrium point due to the changes of the DIFFERENTIABLE parameters given in g.df_parameters\n",
     "\n",
     "# distance gradient\n",
     "d_gradient = g.distance_gradient(g.F_s, eqs['epi'], eqs['sS'], pars)\n",
+    "print('\\nDirection to maximally increase the distance between \\'epi\\' and \\'sen\\'')\n",
     "pprint(d_gradient) # prints an m-array indicating the direction in differentiable-parameter-space to maximally increase the distance between the given equilibria\n",
     "\n",
     "# eigenvalue gradient\n",
     "e, e_gradient = g.eigenvar_gradient(g.F_s, eqs['epi'], pars)\n",
+    "print('\\nDirection to maximally dencrease the real components of each eigenvalue of \\'epi\\'')\n",
     "pprint(e_gradient) # prints n-long array where each entry is the direction in parameter space corresponding to the biggest decrease in the corresponding entry in e"
    ]
   },
@@ -210,12 +220,12 @@
    "id": "0da52a47-15ea-4261-9122-331ce00965d5",
    "metadata": {},
    "source": [
-    "In order to obtain a new parameter set after moving in the desired direction and calculating the new equilibrium points and a brief summary of wether or not there were bifurcations, the function `g.control()` was made."
+    "In order to obtain a new parameter set after moving in the desired direction and calculating the new equilibrium points and a brief summary of wether or not there were bifurcations, the function `g.control()` was made. This function takes an iterable of gradients (even if only one is going to be used), a step-size, and the dictionaries containing the parameters and equilibrium points, which are going to be modified."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0d95df1e-72a9-4e24-a1c4-bdd8db3e58c5",
    "metadata": {},
    "outputs": [
@@ -284,12 +294,13 @@
     "\n",
     "## Multiple gradient descent\n",
     "In order to calculate the optimum direction of movement, the function `g.optimum_coefficients()` was made.\n",
-    "This calculates the optimum coefficients as described by LeNovére, and returns the direction of descent."
+    "This calculates the optimum coefficients as described by LeNovére, and returns the direction of descent.\n",
+    "Here, we take the object ```e_gradient```, which contains one gradient for each eigenvalue, to show how this works."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "57361647-c54e-49fc-906a-460d38fe1db9",
    "metadata": {},
    "outputs": [
@@ -297,6 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Direction of change to maximally decrease the real part of all eigenvalues of 'epi' simultaneously\n",
       "array([ 2.85975964e-02, -1.50578314e-02,  3.54320731e-03, -2.00797535e-03,\n",
       "        4.00202153e-02,  2.27117399e-04,  3.16144991e-03, -2.95460671e-04,\n",
       "       -3.90795204e-03, -1.13217214e-02, -8.82373707e-02, -2.26331526e-02,\n",
@@ -310,6 +322,7 @@
    ],
    "source": [
     "opt = g.optimum_coefficients(e_gradient)\n",
+    "print('Direction of change to maximally decrease the real part of all eigenvalues of \\'epi\\' simultaneously')\n",
     "pprint(opt)"
    ]
   },
@@ -318,13 +331,12 @@
    "id": "e6811fff-4709-4ed4-ab84-bac26f938ccd",
    "metadata": {},
    "source": [
-    "Note that this function is called by `g.control()`, so passing an `array` or `list` of gradients can be done (in fact, even if it is only one gradient, it should be put in such an iterable).\n",
-    "So, in order to move along the direction that reduces **all** eigenvalues of the equilibrium *epi* (gradients calculated above), we would only need to call"
+    "Note that the function `g.control()` can take an `array`, `list` of gradients and calculate the optimum direction automatically. There is no need to calculate it beforehand. So, in order to move along the direction that reduces **all** eigenvalues of *epi*, it is enough to call"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "7e73d8b9-8f49-4ac9-9a6c-7a030e31ff5f",
    "metadata": {},
    "outputs": [
